suppress warning & deprecation fixed