@@ -86,7 +86,7 @@ public class PlatformBootstrap {
                         throw new RuntimeException("Class " + moduleClass + " is annoated with " + ModuleDefinition.class.getSimpleName() + " but do not implement " + ServerModule.class.getSimpleName());
                     }
                     final ModuleDefinition moduleDefinition = moduleClass.getAnnotation(ModuleDefinition.class);
-                    final ServerModule instance = (ServerModule) moduleClass.newInstance();
+                    final ServerModule instance = (ServerModule) moduleClass.getConstructor().newInstance();
                     modules.put(instance.getName(), instance);
                 }
 
